PROJECT(gateway)
cmake_minimum_required(VERSION 2.8)
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../server/base)
INCLUDE_DIRECTORIES(../server/khaki)
INCLUDE_DIRECTORIES(../server/khaki/deps/include)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
MESSAGE(${CMAKE_CURRENT_SOURCE_DIR})
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../server/khaki/build)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../server/khaki/deps/lib)

AUX_SOURCE_DIRECTORY(. SRC_CPP)
ADD_EXECUTABLE(../bin/gateway ${SRC_CPP})

TARGET_LINK_LIBRARIES(../bin/gateway libkhaki.a)
TARGET_LINK_LIBRARIES(../bin/gateway liblog4cpp.a)